# minkv

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  install.sh
.cargo/: config.toml
.github/workflows/: rust.yaml
proto/: minkv.proto
proto/google/protobuf/: empty.proto
src/: cli.rs  config.rs  entry.rs  error.rs  lib.rs  main.rs  server.rs  store.rs  util.rs
src/cli/: cli.rs
src/entry/: entry.rs  hint.rs
src/error/: error.rs
src/grpc/: server.rs
src/store/: file.rs  store.rs
src/util/: lock.rs  time.rs
tools/: upload_assets.sh
